# hands-on-machine-learning-notebooks

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/chapters/: 1-the-ML-landscape.ipynb  2-end-to-end-ML-project.ipynb
notebooks/prerequisites/: math_linear_algebra.ipynb  numpy_guide.ipynb  pandas_guide.ipynb  tools_numpy.ipynb
