[project]
name = "hands-on-machine-learning-notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    # Core scientific packages
    "jupyterlab>=4.5.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",

    # Machine Learning packages
    "scikit-learn>=1.7.2",
]
